Fix sidebar icons
Icons where placed too far up on the screen
so they were hidden on the home page.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -110,8 +110,7 @@ a {
     }
 
     .sidebar-icons {
-        align-self: flex-start;
-        margin-top: -32vh;
+        margin-bottom: 5vh;
     }
 
     .sidebar-icons img{
